Massive z-index for fixed header to avoid elements scrolling over it.

--- a/css/site/_header.scss
+++ b/css/site/_header.scss
@@ -9,7 +9,7 @@ header {
 	right: 0;
 	top: 0;
 	padding: 0;
-	z-index: 2;
+	z-index: 1001;
 }
 
 
